--- a/package.json
+++ b/package.json
@@ -14,19 +14,27 @@
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
+        "laravel-mix-workbox": "^0.1.4",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue-loader": "^17.0.0",
-        "vue-template-compiler": "^2.6.14"
+        "vue-template-compiler": "^2.6.14",
+        "workbox-webpack-plugin": "^6.5.3"
     },
     "dependencies": {
+        "dexie": "^3.2.2",
         "jquery": "^3.6.0",
         "moment": "^2.29.1",
         "vue": "^3.2.31",
         "vue-router": "^4.0.13",
-        "vue3-cookies": "^1.0.6"
+        "vue3-cookies": "^1.0.6",
+        "workbox-cacheable-response": "^6.5.3",
+        "workbox-expiration": "^6.5.3",
+        "workbox-precaching": "^6.5.3",
+        "workbox-routing": "^6.5.3",
+        "workbox-strategies": "^6.5.3"
     }
 }
